# ot-segmentation-simulator

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
data/: assets.csv  sample_flows.csv  sample_policy.csv
src/ot_simulator/: __init__.py  cli.py  exceptions.py
src/ot_simulator/core/: __init__.py  analyzer.py  exceptions.py  loader.py  result.py  simulator.py  validators.py
src/ot_simulator/models/: __init__.py  asset.py  flow.py  policy.py
src/ot_simulator/reports/: __init__.py  console.py
src/ot_simulator/webapp/: main.py
test/: test_models.py
