[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ot-segmentation-simulator"
version = "0.1.0"
description = "OT Network Segmentation Impact Simulator"
authors = [{name = "Mohammad Delavar", email = "mohammaddelavar2007@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ot-sim = "ot_simulator.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
